--- a/kiiinveeey/src/main/AndroidManifest.xml
+++ b/kiiinveeey/src/main/AndroidManifest.xml
@@ -9,14 +9,14 @@
     <application
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
-        android:label="@string/app_name"
+        android:label="Del-si G-bike App beta 1.00"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
 
         <activity
             android:name=".LoginActivity"
-            android:label="Kinveyprac"
+            android:label="Del-si G-bike App beta 1.00"
             android:theme="@style/AppTheme">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
