--- a/kiiinveeey/src/main/AndroidManifest.xml
+++ b/kiiinveeey/src/main/AndroidManifest.xml
@@ -12,7 +12,9 @@
         android:label="Del-si G-bike App beta 1.00"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
-        android:theme="@style/AppTheme">
+        android:theme="@style/AppTheme"
+        android:name=".App"
+        android:fullBackupContent="false">
 
         <activity
             android:name=".LoginActivity"
@@ -24,6 +26,11 @@
             </intent-filter>
         </activity>
 
+        <activity android:name=".menus">
+            <intent-filter>
+                <action android:name="android.intent.action.DEFAULT" />
+            </intent-filter>
+        </activity>
         <activity android:name=".demodemo">
         </activity>
 
